--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "vue-devops",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ssafyprj.github.io/vue-devops",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "predeploy": "vue-cli-service build",
+    "deploy": "gh-pages -d dist",
+    "clean": "gh-pages-clean",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
